--- a/style.css
+++ b/style.css
@@ -1,1 +1,6 @@
 a:hover{color:green;}
+body,main{display: flex;}
+body{flex-direction: column;}
+main{flex: auto;}
+aside{flex: 1;}
+article{flex: 3;}
